Made some changes

--- a/DatingApp/appsettings.Development.json
+++ b/DatingApp/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  
+  "TokenKey": "Key lies here Key lies here",
+
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
