Making persistant loggedin state in app

--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "angularApplicationUrl": "http://localhost:4200",
+  "angularApplicationUrl": "https://localhost:4200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
