--- a/clientApp/angular.json
+++ b/clientApp/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineStyle": true
+          "inlineStyle": true,    
+          "style": "css"
         },
         "@schematics/angular:application": {
           "strict": true
