Siccessfully added Photo upload finctionality

--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings":{
+    "CloudName": "mufeez",
+    "ApiKey": "982822987333525",
+    "ApiSecret": "SnP1R8kL3oeP1-IX0_nqq0Jfa_E"
+  },
   "AllowedHosts": "*"
 }
